--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,9 @@ tmp/
 # Данные бота
 prices.json
 user_data.json
+user_state.json
+neposedi.db
+test_otveti.txt
 
 # Telegram Bot API
 bot_session.json
